<resources>

    <string name="app_name">Dealers</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_opening">Opening</string>
    <string name="slogan">Find great deals\nShared by people like you</string>
    <string name="sign_up_facebook">Sign up with Facebook</string>
    <string name="sign_up_email">Sign up with email</string>
    <string name="sign_in">Already have an account? <b>Sign In</b></string>
    <string name="title_activity_sign_in">Sign In</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_action">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="edit_image">Edit</string>
    <string name="full_name_hint">Your Full Name</string>
    <string name="date_of_birth_hint">Date Of Birth (optional)</string>
    <string name="gender_hint">Gender (optional)</string>
    <string name="terms_and_privacy_policy">By signing up, you agree to our <a href="http://dealers-app.com/PrivacyPage.htm">Terms and Privacy Policy</a></string>
    <string name="sign_up_action">Sign Up!</string>
    <string-array name="gender_array">
        <item>Unspecified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="leave_blank">Leave blank</string>
    <string name="select_gender">Gender</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_valid_birth_Date">Please enter a valid birth date</string>
    <string name="enter_password">Please enter a password</string>
    <string name="problem">There was a problem</string>
    <string name="please_try_again">Please try again</string>
    <string name="try_again">Try again</string>
</resources>
