<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.dealers.dealers.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            style="@style/inputFieldContainer"
            android:background="@color/static_cell_background_light_gray">

            <ImageView
                android:id="@+id/fullNameIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_full_name_icon_2x" />

            <EditText
                android:id="@+id/fullNameField"
                style="@style/inputFieldEditText"
                android:hint="@string/full_name_hint"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            style="@style/inputFieldContainer"
            android:background="@color/static_cell_background_light_gray">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_email_for_registration_icon_2x" />

            <EditText
                android:id="@+id/emailField"
                style="@style/inputFieldEditText"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            style="@style/inputFieldContainer"
            android:background="@color/static_cell_background_light_gray">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_password_for_registration_icon_2x" />

            <EditText
                android:id="@+id/passwordField"
                style="@style/inputFieldEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            style="@style/inputFieldContainer"
            android:background="@color/static_cell_background_light_gray">

            <ImageView
                android:id="@+id/dateOfBirthIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_date_of_birth_icon_2x" />

            <TextView
                android:id="@+id/dateOfBirthField"
                style="@style/inputFieldDialog"
                android:text="@string/date_of_birth_hint" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputFieldContainer"
            android:background="@color/static_cell_background_light_gray">

            <ImageView
                android:id="@+id/genderIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_gender_icon_2x" />

            <TextView
                android:id="@+id/genderField"
                style="@style/inputFieldDialog"
                android:text="@string/gender_hint" />

        </LinearLayout>

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/terms_and_privacy_policy"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/light_gray_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signUpButton"
                style="@style/actionButton"
                android:onClick="signUp"
                android:text="@string/sign_up_action" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignBottom="@+id/signUpButton"
                android:layout_alignRight="@+id/signUpButton"
                android:layout_alignTop="@+id/signUpButton"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>