<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context="com.dealers.dealers.activities.OpeningActivity"
    android:id="@+id/layout">

    <ImageView
        android:id="@+id/dealers_logo"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_openning_screen"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/light_gray_text"
        android:alpha="0.6"
        android:layout_below="@+id/dealers_logo"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_facebook"
        android:textColor="@color/white"
        android:background="@drawable/facebook_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_above="@+id/sign_up_button"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_email"
        android:textColor="@color/white"
        android:background="@drawable/action_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_above="@+id/signIn"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true"
        android:onClick="signUp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dealers_purple"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true"
        android:text="@string/sign_in"
        android:onClick="signIn" />

</RelativeLayout>
