<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context="com.dealers.dealers.activities.SignInActivity">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
         />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/password_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/signInButton"
            android:text="@string/sign_in_action"
            style="@style/actionButton"
            android:onClick="signIn"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/signInButton"
            android:layout_alignRight="@+id/signInButton"
            android:layout_alignTop="@+id/signInButton"
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            />

    </RelativeLayout>




</LinearLayout>
